fix visible modal

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -77,10 +77,10 @@
 }
 
   .is-open {
-      opacity: 1;
-      visibility: visible;
-      pointer-events: auto;
-
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    z-index: 9999;
   }
 
   .mobile-header-logo{
